------------------
Mark "o": new feature
Mark "*": bug fixed.
Mark "!": change that can break compatibility with older version
===============================================================================

version 5.0.3
=========================
o new interface 'Nehan.createPagedElement' is created. more abstract layer and easy to use.
o add plugin for gravator(nehan.gravator.js)


version 5.0.2 2014/06/26
=========================
o regexp name selector is supported.
o to define custom single tag, add lexing-rule interfaces(setSingleTag, setSingleTagRex).
o enabled selector of multiple css classes like 'div.nehan-xxx.nehan-yyy.nehan-zzz'.
o enabled margin cancel.
o support 'auto' as 'table-layout'.
o support word-break property.
o add plugins directory.
o add plugins(font-awesome, speak, tip).
* eval unmanaged css props before store

version 5.0.1 2014/05/13
=========================
o now 'oncreate' property is enabled for selector value,
  called when layout is evaluated and dom element is created.
o global style interfaces Nehan.setStyle(or Nehan.setStyles) are added.
! now module UnitSize is included in StyleContext class.

version 5.0.0 2014/04/25
=========================
o more complex float supported, not only static size float, but also dynamic block element can be floated.
! callback argument for functional value and callback is changed,
  SelectorContext is for functional css value, and SelectorCallbackContext is for 'onload' callback.
! for many future are updated, remove the older test folter, so we must create newer one(TODO).

version 4.0.11 2014/xx/xx
=========================
* fix trident rotation bug.
* use 'white-space:pre' instead of tag name.
* fix bug about rotation of alphabet in IE9+.
o add Config.iboxEnable for security reason.
o add Tag::getDatasetAttrsRaw to get attributes with "data-" prefixes.
o support z-index
o support position:absolute
o enabled vert-glyph for safari(ver >= 5)

version 4.0.10, 2013/12/04
=========================