@@ -37,6 +37,7 @@
     <script type="text/javascript" src="nehan.speak.js"></script>
     <script type="text/javascript" src="nehan.tip.js"></script>
     <script type="text/javascript" src="nehan.gravator.js"></script>
+    <script type="text/javascript" src="nehan.pasted.js"></script>
 
     <!-- test scripts -->
     <script type="text/javascript" src="test-text.js"></script>
